# elevator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ctrler.c  ctrler.h  display.c  display.h  ele  ele.c  ele.h  elevator  elevator_ctrl_ui.c  elevator_ctrl_ui.h  floor.glade  floor.glade~  floor_ui.c  floor_ui.h  in_lift.glade  in_lift.glade~  main.c  makefile  pipe.c  pipe.h  process.c  process.h  schedule.c  schedule.h  smemory.c  smemory.h  tags  test.txt  types_c.taghl
