cmake_minimum_required(VERSION 2.8)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -w -g -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
aux_source_directory(. DIR_TOOT_SRCS)
add_executable(ele ${DIR_TOOT_SRCS})
find_package(Threads REQUIRED)
find_package (PkgConfig REQUIRED)
pkg_check_modules (GTK3 REQUIRED gtk+-3.0)
include_directories (${GTK3_INCLUDE_DIRS})
link_directories (${GTK3_LIBRARY_DIRS})
if(THREADS_HAVE_PTHREAD_ARG)
  set_property(TARGET ele PROPERTY COMPILE_OPTIONS "-pthread")
  set_property(TARGET ele PROPERTY INTERFACE_COMPILE_OPTIONS "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
  target_link_libraries(ele "${CMAKE_THREAD_LIBS_INIT}")
endif()
add_definitions (${GTK3_CFLAGS_OTHER})
target_link_libraries (ele ${GTK3_LIBRARIES})

